{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 39,
  "lineage": "9d90e187-ff5d-6302-85d5-90e6f6c5081a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a158cde2447c2e17",
            "association_id": "eipassoc-081f9eaefdd3974ff",
            "domain": "vpc",
            "id": "eipalloc-0a158cde2447c2e17",
            "network_border_group": "us-east-2",
            "network_interface": "eni-05187c0b9c1e5baef",
            "private_dns": "ip-10-0-2-226.us-east-2.compute.internal",
            "private_ip": "10.0.2.226",
            "public_dns": "ec2-3-20-181-71.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.181.71",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-092b51d9008adea15",
            "arn": "arn:aws:ec2:us-east-2:949620661336:instance/i-06dd93612e2a5fb2d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06dd93612e2a5fb2d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cc76fc104345e51b",
            "private_dns": "ip-10-0-2-109.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.109",
            "public_ip": "3.142.83.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02f1624e3b1ca3f84",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-019e74eecf6aa7283",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05abb03a205a7caa0"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-from-anywhere",
            "aws_subnet.public",
            "aws_vpc.root-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-092b51d9008adea15",
            "arn": "arn:aws:ec2:us-east-2:949620661336:instance/i-022d0141bbd30c81d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022d0141bbd30c81d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0588bd147a2ace7c0",
            "private_dns": "ip-10-0-1-165.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05395755f9f7dfc4b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06aeb7d82c9154dbe",
            "tags": {
              "Name": "server"
            },
            "tags_all": {
              "Name": "server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07607d67b681aa81b"
            ]
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_security_group.server-sg",
            "aws_security_group.ssh-from-anywhere",
            "aws_subnet.pivate",
            "aws_vpc.root-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "root-vpc-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949620661336:internet-gateway/igw-0eeb45c145c1309ec",
            "id": "igw-0eeb45c145c1309ec",
            "owner_id": "949620661336",
            "tags": {
              "Name": "internet"
            },
            "tags_all": {
              "Name": "internet"
            },
            "vpc_id": "vpc-06cacec6bca3c838e"
          },
          "dependencies": [
            "aws_vpc.root-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "server-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:949620661336:loadbalancer/app/my-alb/ba549e44affdd383",
            "arn_suffix": "app/my-alb/ba549e44affdd383",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-1597470950.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:949620661336:loadbalancer/app/my-alb/ba549e44affdd383",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e3a87c43f4c999e8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-019e74eecf6aa7283"
              },
              {
                "subnet_id": "subnet-06aeb7d82c9154dbe"
              }
            ],
            "subnets": [
              "subnet-019e74eecf6aa7283",
              "subnet-06aeb7d82c9154dbe"
            ],
            "vpc_id": "vpc-06cacec6bca3c838e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_subnet.pivate",
            "aws_subnet.public",
            "aws_vpc.root-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:949620661336:listener/app/my-alb/ba549e44affdd383/5ae005a24ba57dcc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:949620661336:targetgroup/my-target-group/0b059615c52305d3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:949620661336:listener/app/my-alb/ba549e44affdd383/5ae005a24ba57dcc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:949620661336:loadbalancer/app/my-alb/ba549e44affdd383",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.server-lb",
            "aws_lb_target_group.my_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:949620661336:targetgroup/my-target-group/0b059615c52305d3",
            "arn_suffix": "targetgroup/my-target-group/0b059615c52305d3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:949620661336:targetgroup/my-target-group/0b059615c52305d3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06cacec6bca3c838e"
          },
          "dependencies": [
            "aws_vpc.root-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "my_target_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:949620661336:targetgroup/my-target-group/0b059615c52305d3-20230613093334674100000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:949620661336:targetgroup/my-target-group/0b059615c52305d3",
            "target_id": "i-022d0141bbd30c81d"
          },
          "dependencies": [
            "aws_instance.jenkins-server",
            "aws_lb_target_group.my_target_group",
            "aws_security_group.lb-sg",
            "aws_security_group.server-sg",
            "aws_security_group.ssh-from-anywhere",
            "aws_subnet.pivate",
            "aws_vpc.root-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a158cde2447c2e17",
            "association_id": "eipassoc-081f9eaefdd3974ff",
            "connectivity_type": "public",
            "id": "nat-087d150cb8ef38c87",
            "network_interface_id": "eni-05187c0b9c1e5baef",
            "private_ip": "10.0.2.226",
            "public_ip": "3.20.181.71",
            "subnet_id": "subnet-019e74eecf6aa7283",
            "tags": {
              "Name": "NAT-GW"
            },
            "tags_all": {
              "Name": "NAT-GW"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_subnet.public",
            "aws_vpc.root-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949620661336:route-table/rtb-087c5a514201fbb28",
            "id": "rtb-087c5a514201fbb28",
            "owner_id": "949620661336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-087d150cb8ef38c87",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "projectAWS-private-route-table"
            },
            "tags_all": {
              "Name": "projectAWS-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cacec6bca3c838e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_nat_gateway.nat-gateway",
            "aws_subnet.public",
            "aws_vpc.root-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949620661336:route-table/rtb-08d9f4056d46d79fe",
            "id": "rtb-08d9f4056d46d79fe",
            "owner_id": "949620661336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eeb45c145c1309ec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "projectAWS-public-route-table"
            },
            "tags_all": {
              "Name": "projectAWS-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cacec6bca3c838e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.root-vpc-IGW",
            "aws_vpc.root-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005e0d4eb6c8c07ac",
            "route_table_id": "rtb-087c5a514201fbb28",
            "subnet_id": "subnet-06aeb7d82c9154dbe"
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.private",
            "aws_subnet.pivate",
            "aws_subnet.public",
            "aws_vpc.root-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea0cbce54c60ceda",
            "route_table_id": "rtb-08d9f4056d46d79fe",
            "subnet_id": "subnet-019e74eecf6aa7283"
          },
          "dependencies": [
            "aws_internet_gateway.root-vpc-IGW",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.root-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949620661336:security-group/sg-0e3a87c43f4c999e8",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3a87c43f4c999e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http from anywhere",
            "name_prefix": "",
            "owner_id": "949620661336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "http-from-anywhere"
            },
            "tags_all": {
              "Name": "http-from-anywhere"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cacec6bca3c838e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.root-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949620661336:security-group/sg-07607d67b681aa81b",
            "description": "server-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07607d67b681aa81b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "8080 from lb",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e3a87c43f4c999e8"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "ssh from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05abb03a205a7caa0"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "server-sg",
            "name_prefix": "",
            "owner_id": "949620661336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-server"
            },
            "tags_all": {
              "Name": "sg-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cacec6bca3c838e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_security_group.ssh-from-anywhere",
            "aws_vpc.root-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-from-anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949620661336:security-group/sg-05abb03a205a7caa0",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05abb03a205a7caa0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-from-anywhere",
            "name_prefix": "",
            "owner_id": "949620661336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-from-anywhere"
            },
            "tags_all": {
              "Name": "ssh-from-anywhere"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cacec6bca3c838e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.root-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949620661336:subnet/subnet-06aeb7d82c9154dbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06aeb7d82c9154dbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949620661336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-06cacec6bca3c838e"
          },
          "dependencies": [
            "aws_vpc.root-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949620661336:subnet/subnet-019e74eecf6aa7283",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019e74eecf6aa7283",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "949620661336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-06cacec6bca3c838e"
          },
          "dependencies": [
            "aws_vpc.root-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "root-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:949620661336:vpc/vpc-06cacec6bca3c838e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bfff62ff0e6866fa",
            "default_route_table_id": "rtb-0d4940fb4694e1248",
            "default_security_group_id": "sg-0931db14de5c42ae5",
            "dhcp_options_id": "dopt-8d7783e4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06cacec6bca3c838e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4940fb4694e1248",
            "owner_id": "949620661336",
            "tags": {
              "Name": "project-aws"
            },
            "tags_all": {
              "Name": "project-aws"
            }
          }
        }
      ]
    }
  ]
}